--- a/style.css
+++ b/style.css
@@ -1,60 +1,177 @@
 .header{
- display: flex;
  margin-top: 24px;
 }
 
 .owl {
-  margin-left: 99px;
+
   margin-top: 24px;
   width: 33px;
   height: 42px;
 }
 
-.home {
-  margin-left: 800px;
-  font-family: Helvetica;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 20px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #636060;
+
+.header p{
+    display: inline;
+    width: 34px;
+    font-family: Helvetica;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #636060;
+    width: 1344px;
+    margin-top: 30px;
 }
+  
+.home{
+    margin-left: 766px; 
+}
+
 
 .abt-us {
-  margin-left: 50px;
-  font-family: Helvetica;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 20px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #636060;
+    margin-left: 50px;
 }
 
-.services {
-  margin-left: 50px;
-  font-family: Helvetica;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 20px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #636060;
+
+.services{
+    margin-left: 50px;   
 }
 
-.package {
-  margin-left: 50px;
-  font-family: Helvetica;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 20px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #636060;
+
+.package{
+    margin-left: 50px;
 }
+
 
 .dg {
-  margin-top: 32px;
-  width: 1510px;
+  margin-top: 22px;
+  width: 1519px;
+}
+
+
+.Discover{
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.DG{
+    color: #FFF;
+    font-family: Helvetica;
+    font-size: 79px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.travel{
+    color: #FFF;
+    font-family: Helvetica;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.cont1{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 84px;
+}
+
+
+
+
+.cont2{
+    display: flex; 
+    justify-content: space-around;
+    margin-top:56px ;
+}
+
+.b{
+    color: #636060;
+    font-family: Helvetica;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+   
+}
+
+.bb{
+    color: #010101;
+    font-family: Helvetica;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top:9px ;
+}
+
+.bbb{
+    color: #636060;
+    font-family: Helvetica;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 37px;
+}
+
+.bd{
+    color: #343232;
+    font-family: Helvetica;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 23px;
+}
+
+.bs{
+    color: #636060;
+    font-family: Helvetica;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 9px;
+}
+
+
+.d1{
+width: 286px;
+}
+
+.d2{
+    width: 286px;
+}
+
+.d3{
+    width: 286px;
+}
+
+.d4{
+    width: 286px;
+}
+
+.d5{
+    width: 286px;
+    margin-left: 380px;
+}
+
+.d6{
+    width: 286px;
+}
+
+.d7{
+    width: 286px;
 }
